<resources>
    <string name="app_name">The End</string>
    <string name="binding_null">Binding can not be null</string>
    <string name="login">Login</string>
    <string name="login_email"><font size="15">Email</font></string>
    <string name="password"><font size="15">Password</font></string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="name"><font size="15">Name</font></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_log_in">SIGN UP / LOG IN</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="top_rated">Top Rated</string>
    <string name="view_all">View All</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the
        printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the
        1960s with the release of Letraset sheets containing Lorem
        Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="number_of_season">%d Season</string>
    <string name="number_of_seasons">%d Seasons</string>
    <string name="number_of_episodes">%d Episodes</string>
    <string name="cast">Cast</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="known_for">Known For</string>
    <string name="still_living">Still living</string>
</resources>