<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/ivTheEnd"
        android:layout_width="266dp"
        android:layout_height="205dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/word" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTheEnd" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/border"
        android:elevation="22dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/border"
        android:elevation="22dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toTopOf="@+id/tvDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="36dp"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
        app:tint="#6E85B2" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="24dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSignup"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_up"
        android:textColor="#6E85B2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDesc" />


</androidx.constraintlayout.widget.ConstraintLayout>